--- a/Calcu.html
+++ b/Calcu.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Calculadora</title>
         
-        <link rel="stylesheet" href="./calcu.css">
+        <link rel="stylesheet" href="./Estilos.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     </head>
@@ -26,7 +26,7 @@
                 <input type="button" value="1" onclick="document.calcu.respuesta.value+='1'">
                 <input type="button" value="2" onclick="document.calcu.respuesta.value+='2'">
                 <input type="button" value="3" onclick="document.calcu.respuesta.value+='3'">
-                <input type="button" value="*" onclick="document.calcu.respuesta.value+='*'">
+                <input type="button" value="x" onclick="document.calcu.respuesta.value+='x'">
                 <br>
                 <input type="button" value="0" onclick="document.calcu.respuesta.value+='0'">
                 <input type="reset" value="C">
